[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=6.2",
    "wheel>=0.33",
]
build-backend = "setuptools.build_meta"

[project]
name = "pypackagetest"
description = "Package for tests"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]

[tool.setuptools_scm]
local_scheme = "node-and-timestamp"
